--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,61 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 20px;
+}
+
+.search-bar {
+  margin-bottom: 20px;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  margin: 0 auto 20px auto;
+}
+
+#searchInput {
+  padding: 10px;
+  width: 200px;
+  font-size: 20px;
+  border: 5px solid black;
+  border-radius: 5px;
+}
+
+button {
+  padding: 10px 15px;
+  font-size: 20px;
+  margin-left: 10px;
+  cursor: pointer;
+  border: 5px solid black;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
 #container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-  }
-  
-  .number-box {
-    width: 200px;
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    font-size: 5rem;
-    color: white;
-    border-radius: 4px;
-  }
-  
-  .even {
-    background-color: green;
-  }
-  
-  .odd {
-    background-color: yellow;
-    color: black;
-  }
-  
-  .prime {
-    background-color: red;
-  }
-  
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.number-box {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 5rem;
+  color: white;
+  border-radius: 4px;
+}
+
+.even {
+  background-color: green;
+}
+
+.odd {
+  background-color: yellow;
+  color: black;
+}
+
+.prime {
+  background-color: red;
+}
